Fixed layout issues with not tiles panorama pages.

--- a/scalejs.modernui/scalejs.modernui/panorama/panorama.css
+++ b/scalejs.modernui/scalejs.modernui/panorama/panorama.css
@@ -27,4 +27,5 @@
 .panorama .subtitle
 {
     text-transform:uppercase;
+    font-weight: bold;
 }
